tests/syntax_error/missing_number_after_eminus.jou
def foo() -> None:
    x = 123e-  # Error: invalid number or variable name "123e-"
